examples/solidity/bad/onlytests.sol
pragma solidity ^0.4.24;

contract Abstract {
  function echidna_f() pure public returns (int) {return 0;}
}
